<resources>
    <string name="app_name">Movie Catalog 1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="movie">Movies</string>
    <string name="tv">Tv Show</string>
    <string name="movie_catalogue">Movie Catalogue</string>
    <string name="x">X</string>
</resources>